fixed the account apis and till transaction add api